<resources>
    <string name="app_name">IDEA Study</string>
    <string name="title_activity_settings_app">SettingsApp</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="username">Tên người dùng</string>
    <string name="password">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="yourphone">Số điện thoại</string>
    <string name="signup">Đăng ký</string>
</resources>