<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Signup">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="45sp"
        android:gravity="center"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_marginHorizontal="8dp">
        <TableRow>
            <TextView
                android:text="@string/username"/>
            <EditText
                android:id="@+id/enter_username"
                android:inputType="text"
                android:hint="@string/username"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/thongbaoloitennguoidung"
                android:layout_column="1"
                android:textColor="@color/design_default_color_error"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/password"/>
            <EditText
                android:id="@+id/enter_password"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/thongbaoloimatkhau"
                android:layout_column="1"
                android:textColor="@color/design_default_color_error"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/email"/>
            <EditText
                android:id="@+id/enter_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/thongbaoloiemail"
                android:layout_column="1"
                android:textColor="@color/design_default_color_error"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/yourphone"/>
            <EditText
                android:id="@+id/enter_phonenumber"
                android:hint="@string/yourphone"
                android:inputType="phone"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#1976D2"
            android:text="@string/signup"/>
    </LinearLayout>
</LinearLayout>